<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRDV">

    <EditText
        android:id="@+id/title_input2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/contact_input2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/contact_person"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_input2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="82dp"
        android:layout_height="34dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phone_number_input2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:hint="@string/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_input2" />

    <EditText
        android:id="@+id/address_input2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:hint="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_input2" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="108dp"
        android:layout_height="57dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="96dp"
        android:text="@string/update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_input2" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="99dp"
        android:layout_height="55dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="280dp"
        android:text="@string/share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="109dp"
        android:layout_height="61dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_button" />

    <TextView
        android:id="@+id/date_input2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_input2" />

    <TextView
        android:id="@+id/time_input2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_input2" />
</androidx.constraintlayout.widget.ConstraintLayout>