<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRDV">

    <EditText
        android:id="@+id/title_input"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/contact_input"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/contact_person"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_input" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="82dp"
        android:layout_height="34dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_rdv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phone_number_input"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:hint="@string/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_input" />

    <EditText
        android:id="@+id/address_input"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:hint="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_input" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="124dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_input" />

    <TextView
        android:id="@+id/date_input"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_input" />

    <TextView
        android:id="@+id/time_input"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_input" />
</androidx.constraintlayout.widget.ConstraintLayout>