<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/rdv_title_txt"
            app:layout_constraintTop_toBottomOf="@+id/rdv_title_txt">


            <TextView
                android:id="@+id/rdv_id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="1"
                android:textColor="#000"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.017" />

            <TextView
                android:id="@+id/rdv_title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="84dp"
                android:hint="@string/title"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rdv_id_txt" />

            <TextView
                android:id="@+id/rdv_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="44dp"
                android:text="@string/date"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.865" />

            <TextView
                android:id="@+id/rdv_contact_txt"
                android:layout_width="175dp"
                android:layout_height="22dp"
                android:layout_marginStart="172dp"
                android:layout_marginTop="8dp"
                android:hint="@string/contact_person"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/rdv_id_txt"
                app:layout_constraintTop_toBottomOf="@+id/rdv_time_txt" />

            <TextView
                android:id="@+id/rdv_phone_number_txt"
                android:layout_width="175dp"
                android:layout_height="22dp"
                android:layout_marginStart="172dp"
                android:layout_marginTop="60dp"
                android:hint="@string/phone_number"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/rdv_id_txt"
                app:layout_constraintTop_toBottomOf="@+id/rdv_time_txt" />

            <TextView
                android:id="@+id/rdv_address_txt"
                android:layout_width="175dp"
                android:layout_height="22dp"
                android:layout_marginStart="172dp"
                android:layout_marginTop="112dp"
                android:hint="@string/address"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/rdv_id_txt"
                app:layout_constraintTop_toBottomOf="@+id/rdv_time_txt" />

            <TextView
                android:id="@+id/rdv_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>